@@ -365,6 +365,7 @@ Fixed bug 2056318 - False positive for AvoidInstantiatingObjectsInLoops
 Fixed bug 1977438 - False positive for UselessStringValueOf
 Fixed bug 2050064 - False + SuspiciousOctalEscape with backslash literal
 Fixed bug 1556594 - Wonky detection of NullAssignment
+Fixed bug 1481051 - false + UnusedNullCheckInEquals (and other false positives too)
 ruleset.dtd and ruleset_xml_schema.xsd added to jar file in rulesets directory
 bin and java14/bin scripts:
 	retroweaver version was not correct in java14/bin scripts
